fixed sign-in form alignment on landing page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -127,11 +127,14 @@ main p, h1, h2, h3, h4, h5, h6 {
     margin-right: 2em;
 }
 
+main p {
+    line-height: 115%;
+}
+
 .hero h1 {
-    line-height: 175%;
+    line-height: 125%;
     margin-left: 2em;
     margin-right: 2em;
-    margin-top: 4em;
 }
 
 .hero-body p {
@@ -178,8 +181,11 @@ main p, h1, h2, h3, h4, h5, h6 {
     background-color: #333;
     border-style: groove;
     border-color: is-dark; 
-    width: 40%;
-    margin-bottom: 2em;
+    margin-bottom: 1em;
+}
+
+.label:not(:last-child), .field:not(:last-child) {
+    margin-bottom: 0 !important;
 }
 
 .hidden-form {
@@ -212,29 +218,20 @@ main p, h1, h2, h3, h4, h5, h6 {
 
     }
 }
-
+/*Tablet and Desktop*/
 @media screen and (min-width: 769px) {
     .top-start h1{
-        margin-top: 6em;
-    }
-    .desktop-image {
-        display: block;
-    }
-
-    .mobile-image {
-        display: none;
+        margin-top: 5em;
     }
 }
 
+/*Mobile*/
 @media screen and (max-width: 768px) {
-    .desktop-image {
-        display: none;
-    }
     .theater {
             background-image: url(/public/images/mob/Theater-w-logo-mob.png);
         }
     .top-start h1 {
-        margin-top: 12em;
+        margin-top: 7em;
     }
 }
     .mobile-image {
